objects/QuoteRequest_Event__e/QuoteRequest_Event__e.object-meta.xml
<CustomObject>
    <description>QuoteRequest Event</description>
    <label>QuoteRequest Event</label>
    <pluralLabel>QuoteRequest Events</pluralLabel>
</CustomObject>