objects/QuoteRequest_Event__e/fields/AdditionalComments__c.field-meta.xml
<CustomField>
    <fullName>AdditionalComments__c</fullName>
    <description>AdditionalComments</description>
    <label>AdditionalComments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>