objects/QuoteRequest_Event__e/fields/BillingAttention__c.field-meta.xml
<CustomField>
    <fullName>BillingAttention__c</fullName>
    <description>BillingAttention</description>
    <label>BillingAttention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>