objects/QuoteRequest_Event__e/fields/BillingCity__c.field-meta.xml
<CustomField>
    <fullName>BillingCity__c</fullName>
    <description>BillingCity</description>
    <label>BillingCity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>