objects/QuoteRequest_Event__e/fields/BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>BillingCountry__c</fullName>
    <description>BillingCountry</description>
    <label>BillingCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>