objects/QuoteRequest_Event__e/fields/BillingProvince__c.field-meta.xml
<CustomField>
    <fullName>BillingProvince__c</fullName>
    <description>BillingProvince</description>
    <label>BillingProvince</label>
    <length>255</length>
    <type>Text</type>
</CustomField>