objects/QuoteRequest_Event__e/fields/BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>BillingStreet__c</fullName>
    <description>BillingStreet</description>
    <label>BillingStreet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>