objects/QuoteRequest_Event__e/fields/BillingZipCode__c.field-meta.xml
<CustomField>
    <fullName>BillingZipCode__c</fullName>
    <description>BillingZipCode</description>
    <label>BillingZipCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>