objects/QuoteRequest_Event__e/fields/CreateQuote__c.field-meta.xml
<CustomField>
    <fullName>CreateQuote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create Quote checkbox</description>
    <label>CreateQuote</label>
    <type>Checkbox</type>
</CustomField>