objects/QuoteRequest_Event__e/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <description>Customer Id</description>
    <label>CustomerId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>