objects/QuoteRequest_Event__e/fields/DealRegId__c.field-meta.xml
<CustomField>
    <fullName>DealRegId__c</fullName>
    <description>Deal Registration Id</description>
    <label>DealRegId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>