objects/QuoteRequest_Event__e/fields/DealRegOwnerId__c.field-meta.xml
<CustomField>
    <fullName>DealRegOwnerId__c</fullName>
    <description>DealRegOwnerId</description>
    <label>DealRegOwnerId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>