objects/QuoteRequest_Event__e/fields/DeploymentProviderId__c.field-meta.xml
<CustomField>
    <fullName>DeploymentProviderId__c</fullName>
    <description>DeploymentProvider Id</description>
    <label>DeploymentProviderId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>