objects/QuoteRequest_Event__e/fields/DeploymentType__c.field-meta.xml
<CustomField>
    <fullName>DeploymentType__c</fullName>
    <description>DeploymentType</description>
    <label>DeploymentType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>