objects/QuoteRequest_Event__e/fields/DistributorEmail__c.field-meta.xml
<CustomField>
    <fullName>DistributorEmail__c</fullName>
    <description>DistributorEmail</description>
    <label>DistributorEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>