objects/QuoteRequest_Event__e/fields/DML_Operation__c.field-meta.xml
<CustomField>
    <fullName>DML_Operation__c</fullName>
    <description>DML Operation</description>
    <label>DML Operation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>