objects/QuoteRequest_Event__e/fields/DownstreamPartnerId__c.field-meta.xml
<CustomField>
    <fullName>DownstreamPartnerId__c</fullName>
    <description>DownstreamPartnerId (Reseller)</description>
    <label>DownstreamPartnerId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>