objects/QuoteRequest_Event__e/fields/MultiTierTransaction__c.field-meta.xml
<CustomField>
    <fullName>MultiTierTransaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Multi Tier Transaction</description>
    <label>MultiTierTransaction</label>
    <type>Checkbox</type>
</CustomField>