objects/QuoteRequest_Event__e/fields/PartnerContactEmail__c.field-meta.xml
<CustomField>
    <fullName>PartnerContactEmail__c</fullName>
    <description>PartnerContactEmail</description>
    <label>PartnerContactEmail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>