objects/QuoteRequest_Event__e/fields/PartnerId__c.field-meta.xml
<CustomField>
    <fullName>PartnerId__c</fullName>
    <description>PartnerId</description>
    <label>PartnerId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>