objects/QuoteRequest_Event__e/fields/ShippingAttention__c.field-meta.xml
<CustomField>
    <fullName>ShippingAttention__c</fullName>
    <description>ShippingAttention</description>
    <label>ShippingAttention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>