objects/QuoteRequest_Event__e/fields/ShippingCity__c.field-meta.xml
<CustomField>
    <fullName>ShippingCity__c</fullName>
    <description>ShippingCity</description>
    <label>ShippingCity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>