objects/QuoteRequest_Event__e/fields/ShippingCountry__c.field-meta.xml
<CustomField>
    <fullName>ShippingCountry__c</fullName>
    <description>ShippingCountry</description>
    <label>ShippingCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>