objects/QuoteRequest_Event__e/fields/ShippingProvince__c.field-meta.xml
<CustomField>
    <fullName>ShippingProvince__c</fullName>
    <description>ShippingProvince</description>
    <label>ShippingProvince</label>
    <length>255</length>
    <type>Text</type>
</CustomField>