objects/QuoteRequest_Event__e/fields/ShippingStreet__c.field-meta.xml
<CustomField>
    <fullName>ShippingStreet__c</fullName>
    <description>ShippingStreet</description>
    <label>ShippingStreet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>