objects/QuoteRequest_Event__e/fields/ShippingZipCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingZipCode__c</fullName>
    <description>ShippingZipCode</description>
    <label>ShippingZipCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>