objects/QuoteRequest_Event__e/fields/SolutionsSelected__c.field-meta.xml
<CustomField>
    <fullName>SolutionsSelected__c</fullName>
    <description>Solutions Selected</description>
    <label>SolutionsSelected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>