objects/QuoteRequest_Event__e/fields/SubmitterRole__c.field-meta.xml
<CustomField>
    <fullName>SubmitterRole__c</fullName>
    <description>SubmitterRole</description>
    <label>SubmitterRole</label>
    <length>50</length>
    <type>Text</type>
</CustomField>