objects/QuoteRequest_Event__e/fields/SubscriptionTerm__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionTerm__c</fullName>
    <description>Subscription Term</description>
    <label>SubscriptionTerm</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>