objects/QuoteRequest_Event__e/fields/SupportProviderId__c.field-meta.xml
<CustomField>
    <fullName>SupportProviderId__c</fullName>
    <description>SupportProvider Id</description>
    <label>SupportProviderId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>