objects/QuoteRequest_Event__e/fields/SyncWithZift__c.field-meta.xml
<CustomField>
    <fullName>SyncWithZift__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sync With Zift checkbox</description>
    <label>SyncWithZift</label>
    <type>Checkbox</type>
</CustomField>